--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "^8.12",
-        "laravel/passport": "^10.1",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2",
-        "predis/predis": "^1.1"
+        "laravel/ui": "^3.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
